corretto text file encoding (ora utf8)

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-I Love These Songs è una applicazione fortemente integrata con Facebook e
+I Love These Songs √® una applicazione fortemente integrata con Facebook e
 Youtube.
-L'utente ha la possibilità di ricercare video (canzoni) tramite youtube e
+L'utente ha la possibilit√† di ricercare video (canzoni) tramite youtube e
 organizzarli in playlist.
-L'interfaccia utente è studiata in modo che l'esecuzione di una playlist o di
-un semplice brano non sia interrotto da attività di ricerca di nuovi video.
-L'applicazione è sviluppata in PHP con il framework Codeigniter 2.
+L'interfaccia utente √® studiata in modo che l'esecuzione di una playlist o di
+un semplice brano non sia interrotto da attivit√† di ricerca di nuovi video.
+L'applicazione √® sviluppata in PHP con il framework Codeigniter 2.
